--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_desafio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/wcarugatti/react-challenge",
+  "homepage": "https://wcarugatti.github.io/react-challenge/",
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^3.1.0",
